edited html, added css and image

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,22 +4,31 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
-
     <!-- Inside the header, add an <h1> element containing your name -->
-
     <!-- Include an image -->
-
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
     <!-- Create a footer element -->
-
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+
+    <header>
+        <h1>sarah preston</h1>
+    </header>
+    <img src="itsme.jpg" alt="Kids feeding a goat" style="width:1300px;height:600px;">
+    <ul>
+        <li>I like crosswords.</li>
+        <li>Cooking food for people is my love language.</li>
+        <li>Sometimes I daydream about being like that guy, Chritopher Knight, who just parked his car on the side of the road and walked into the forest, living there as a hidden wild man for decades. He was only found after years of petty thefts, of small items like jars of peanut butter or propane, and even after that point, the locals felt bad for him and left him stuff. He told a reporter that he never kept a diary, never wrote a single word, because what was the point? So he would just spend his days, doing the basic surviving stuff and reading all the books, but never hearing his own voice or expressing himself through words. Just living inside his head. Yeah, actually I think I wouldn't like that, after all.</li>
+    </ul>
+    <footer>
+        <p> “I have always believed, and I still believe, that whatever good or bad fortune may come our way we can always give it meaning and transform it into something of value.” - Herman Hesse
+        </p>
+    </footer>
 </body>
 </html>
