final css changes

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -21,11 +21,11 @@
     <header>
         <h1>sarah preston</h1>
     </header>
-    <img src="itsme.jpg" alt="Kids feeding a goat" style="width:1300px;height:600px;">
+    <img src="itsme.jpg" alt="Kids feeding a goat" class=responsive>
     <ul>
         <li>I like crosswords.</li>
-        <li>Cooking food for people is my love language.</li>
-        <li>Sometimes I daydream about being like that guy, Chritopher Knight, who just parked his car on the side of the road and walked into the forest, living there as a hidden wild man for decades. He was only found after years of petty thefts, of small items like jars of peanut butter or propane, and even after that point, the locals felt bad for him and left him stuff. He told a reporter that he never kept a diary, never wrote a single word, because what was the point? So he would just spend his days, doing the basic surviving stuff and reading all the books, but never hearing his own voice or expressing himself through words. Just living inside his head. Yeah, actually I think I wouldn't like that, after all.</li>
+        <li>I feel most like myself when chopping vegetables.</li>
+        <li>Sometimes I daydream about being like that guy, Chritopher Knight, who just parked his car on the side of the road and walked into the forest. He lived there, hidden among the Maine woodlands, as a wild man, for decades. He was only found after years of petty thefts caught the attention of the local authorities. He took small things like jars of peanut butter or propane, always making sure to lock the cabin doors on his way out. Even after all those years of mysteriously disappearing items, the locals felt bad for him and would occasionally leave provisions for him to take freely. He only spoke to a single reporter, and told him that he never kept a diary, never wrote a single word, because what was the point? He went to the woods to be alone. So he would just spend his days, doing the basic surviving stuff and reading all the books, but never hearing his own voice or expressing himself through words. Just living inside his head. Yeah, actually I think I wouldn't like that, after all.</li>
     </ul>
     <footer>
         <p> “I have always believed, and I still believe, that whatever good or bad fortune may come our way we can always give it meaning and transform it into something of value.” - Herman Hesse
